changed index file and created new css file

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
         <title>Web Technology</title>
     </head>
     <body>
-        <center><h1>Heading1</h1></center>
+        <center><h1>This is a heading</h1></center>
         <hr>
         <!-- <h2>Heading2</h2>
         <h3>Heading3</h3>
